<resources>
    <string name="app_name">E diary</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="notice">Notice</string>
    <string name="time_table">Time Table</string>
    <string name="daily_diary">Daily Diary</string>
    <string name="calender">Calender</string>
    <string name="leave">Leave</string>
    <string name="result">Result</string>
    <string name="title_activity_notice">NoticeActivity</string>
    <string name="hint_notice_message">Enter Notice</string>
    <string name="title_activity_daily_diary">DailyDiaryActivity</string>
    <string name="title_activity_diary">DiaryActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_time_table">TimeTableActivity</string>
</resources>
