<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="crafty.schooldiary.diary.e.student.craftystudio.ediary.MainActivity"
    tools:showIn="@layout/app_bar_main">


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxHeight="400dp"
        android:minHeight="250dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:onClick="onTimeTableClick"
            app:cardBackgroundColor="@color/timetableCardColor"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time_table"
                style="@style/mainActivityTextViewStyle"
                   />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:onClick="onNoticeBoardClick"
            app:cardBackgroundColor="@color/timetableCardColor"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notice"
                style="@style/mainActivityTextViewStyle"
                />

        </android.support.v7.widget.CardView>



    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:onClick="onDailyDiaryClick"
            app:cardBackgroundColor="@color/timetableCardColor"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/daily_diary"
                style="@style/mainActivityTextViewStyle"
                />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:onClick="onCalenderClick"
            app:cardBackgroundColor="@color/timetableCardColor"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calender"
                style="@style/mainActivityTextViewStyle"
                />

        </android.support.v7.widget.CardView>



    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:onClick="onLeaveClick"
            app:cardBackgroundColor="@color/timetableCardColor"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/leave"
                style="@style/mainActivityTextViewStyle"
                />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:onClick="onResultClick"
            app:cardBackgroundColor="@color/timetableCardColor"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/result"
                style="@style/mainActivityTextViewStyle"
                />

        </android.support.v7.widget.CardView>



    </LinearLayout>



    </LinearLayout>

</ScrollView>
